plugins {
	id 'org.springframework.boot' version '2.6.7'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'com.cube.manage'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '1.8'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}
dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
//	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	compileOnly 'org.projectlombok:lombok'
	implementation 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'mysql:mysql-connector-java:8.0.28'
	implementation 'org.thymeleaf:thymeleaf:3.0.15.RELEASE'
	implementation 'org.apache.spark:spark-mllib_2.13:3.5.2'
	implementation 'org.apache.spark:spark-sql_2.13:3.5.2'
	implementation 'org.scala-lang:scala-library:2.13.14'
	implementation 'org.apache.maven.plugins:maven-surefire-plugin:3.4.0'
	implementation 'org.springframework.boot:spring-boot-maven-plugin:3.3.3'
//	implementation 'com.mchange:c3p0:0.9.5.5'

}

tasks.named('test') {
	useJUnitPlatform()
}

test {
	jvmArgs '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED'
}

